whereami-grpc-frontend-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: whereami-grpc-vs
  namespace: whereami-grpc-frontend
spec:
  gateways:
  - asm-ingress/asm-ingressgateway
  hosts:
  - 'frontend.endpoints.gateway-multicluster-01.cloud.goog' # replace with your project name 
  http:
  - route:
    - destination:
        host: whereami-grpc-frontend
        port:
          number: 9090
