whereami-grpcfrontend-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: whereami-grpc-vs
  namespace: whereami-grpc-frontend
spec:
  gateways:
  - asm-ingress/asm-ingressgateway
  hosts:
  - 'frontend.endpoints..cloud.goog'
  http:
  - route:
    - destination:
        host: whereami-grpc-frontend
        port:
          number: 9090
